# apriltag_mission_ws

./: .gitignore  README.md  mock_trigger.sh  start_bringup.sh
src/apriltag_detector/: package.xml  setup.py
src/apriltag_detector/apriltag_detector/: detector_node.py
src/apriltag_interfaces/: CMakeLists.txt  package.xml
src/apriltag_interfaces/msg/: MissionSignal.msg  TagDetection.msg  TagDetectionArray.msg  TagPose.msg
src/apriltag_interfaces/srv/: TriggerMission.srv
src/mission_manager/: package.xml  setup.py
src/mission_manager/mission_manager/: mission_node.py  state_machine.py
src/mission_manager/scripts/: mock_trigger.py
src/robot_bringup/: package.xml  setup.py
src/robot_bringup/config/: camera_tf.yaml  controller_params.yaml  detector_params.yaml  mission_params.yaml  missions.yaml
src/robot_bringup/launch/: bringup.launch.py
src/visual_servo_controller/: package.xml  setup.cfg  setup.py
src/visual_servo_controller/visual_servo_controller/: control_laws.py  servo_node.py
