<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mission_manager</name>
  <version>0.1.0</version>
  <description>Mission manager with state machine for Apriltag-triggered tasks</description>
  <maintainer email="dandelion@example.com">dandelion</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>lifecycle_msgs</depend>
  <depend>apriltag_interfaces</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
