<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_bringup</name>
  <version>0.1.0</version>
  <description>Launch files and configuration for the Apriltag mission system</description>
  <maintainer email="dandelion@example.com">dandelion</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>apriltag_detector</depend>
  <depend>visual_servo_controller</depend>
  <depend>mission_manager</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
