<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>visual_servo_controller</name>
  <version>0.1.0</version>
  <description>Visual servoing controller for Apriltag-based approach</description>
  <maintainer email="dandelion@example.com">dandelion</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>apriltag_interfaces</depend>
  <depend>geometry_msgs</depend>

  <exec_depend>python3-numpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
